css fix for text align

--- a/docs/src/styles/components/_doc-item.scss
+++ b/docs/src/styles/components/_doc-item.scss
@@ -48,7 +48,6 @@
       > .row {
         > .col {
           display: flex;
-          flex-direction: column;
           justify-content: center;
 
           min-width: 0;
